# lingxi-code

./: .gitignore  .lingxirules  AGENTS.md  CLAUDE.md  LICENSE  README.md  config.example.json  lingxi.spec  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
roles/: example.md
scripts/: conftest.py  syntax_check.py  test_apply_patch.py  test_atfile.py  test_background.py  test_check_code.py  test_checkpoint.py  test_claude_code_plan.py  test_code_map.py  test_codeintel.py  test_compaction.py  test_confirm_safety.py  test_context_budget.py  test_cwd.py  test_edit_robustness.py  test_git_tools.py  test_images.py  test_jedi_nav.py  test_lsp_client.py  test_mcp_client.py  test_memory_store.py  test_multi_session.py  test_notify_remote.py  test_onboarding.py  test_parallel_tools.py  test_plan_panel.py  test_projects.py  test_related_files.py  test_remote_safety.py  test_repair_loop.py  test_result_cap.py  test_roles.py  test_run_tests.py  test_session.py  test_session_isolation.py  test_streaming_helpers.py  test_subagent.py  test_task_ledger.py  test_tool_eviction.py  test_tool_gaps.py  (+5 more)
src/: __init__.py  agent.py  checkpoint.py  claude_code.py  codeintel.py  config.py  debug_log.py  floating.py  images.py  limits.py  lsp_client.py  mcp_client.py  memory.py  memory_store.py  models.py  notify.py  paths.py  projects.py  roles.py  session.py  state.py  streaming.py  subagent.py  telegram_poll.py  telegram_push.py  tools.py  tools_codemap.py  tools_common.py  tools_git.py  tools_web.py  verification.py  worktree.py
(+15 files in other folders)
